# Arduino-Kalkulator-UI

./: .gitignore
01_Arduino_Code/: platformio.ini
01_Arduino_Code/src/: main.cpp
02_Calculator_UI/: CMakeLists.txt  CalculatorUI.cpp  CalculatorUI.h  SerialPort.cpp  SerialPort.h  main.cpp  vcpkg.json
03_Docs/: Bea-Marc-Claudius_IU14093996_DLBOEPRS01_D_P1_A.aux  Bea-Marc-Claudius_IU14093996_DLBOEPRS01_D_P1_A.fdb_latexmk  Bea-Marc-Claudius_IU14093996_DLBOEPRS01_D_P1_A.fls  Bea-Marc-Claudius_IU14093996_DLBOEPRS01_D_P1_A.tex
